feat: add `/hero` routes
